crates/karva/tests/it/snapshots/it__basic__max_fail_one_is_equivalent_to_fail_fast.snap
---
source: crates/karva/tests/it/basic.rs
info:
  program: karva
  args:
    - test
    - "--no-parallel"
    - "--max-fail=1"
---
success: false
exit_code: 1
----- stdout -----
    Starting 3 tests across 1 worker
        PASS [TIME] test_max_fail_one::test_first
        FAIL [TIME] test_max_fail_one::test_second

diagnostics:

error[test-failure]: Test `test_second` failed
 --> test_max_fail_one.py:5:5
  |
3 |     assert True
4 |
5 | def test_second():
  |     ^^^^^^^^^^^
6 |     assert False, 'stop here'
  |
info: Test failed here
 --> test_max_fail_one.py:6:5
  |
5 | def test_second():
6 |     assert False, 'stop here'
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^
7 |
8 | def test_third():
  |
info: stop here

────────────
     Summary [TIME] 2 tests run: 1 passed, 1 failed, 0 skipped

----- stderr -----
